--- a/Tech/requirements.txt
+++ b/Tech/requirements.txt
@@ -38,3 +38,7 @@ typing_extensions==4.14.1
 tzdata==2025.2
 Werkzeug==3.1.3
 zope.interface==7.2
+
+# Nouvelles dépendances pour le diagnostic système
+psutil==6.1.3
+django-model-utils==4.5.1
