--- a/Tech/requirements.txt
+++ b/Tech/requirements.txt
@@ -5,11 +5,14 @@ Automat==25.4.16
 cffi==1.17.1
 channels==4.3.1
 channels_redis==4.3.0
+click==8.2.1
+colorama==0.4.6
 constantly==23.10.4
 cryptography==45.0.5
 daphne==4.2.1
 Django==5.2.4
 django-cors-headers==4.7.0
+django-model-utils==5.0.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
 ecdsa==0.19.1
@@ -18,6 +21,8 @@ idna==3.10
 incremental==24.7.2
 MarkupSafe==3.0.2
 msgpack==1.1.1
+pillow==11.3.0
+psutil==7.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
@@ -29,6 +34,7 @@ redis==6.2.0
 rest-framework-simplejwt==0.0.2
 sendgrid==6.12.4
 service-identity==24.2.0
+services==0.1.1
 setuptools==80.9.0
 six==1.17.0
 sqlparse==0.5.3
@@ -38,7 +44,3 @@ typing_extensions==4.14.1
 tzdata==2025.2
 Werkzeug==3.1.3
 zope.interface==7.2
-
-# Nouvelles dépendances pour le diagnostic système
-psutil==6.1.3
-django-model-utils==4.5.1
